--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,3 +1,9 @@
 .Footer {
-    background: blue;
+    height: 7rem;
+  background: #fff;
+}
+h3 {
+    text-align: center;
+    font-size: 2rem;
+    padding-top: 1rem;
 }
