--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,9 @@
-.Header {
-    background: blue;
+Header {
+  height: 7rem;
+  background: #fff;
+}
+h1 {
+    text-align: center;
+    font-size: 3.4rem;
+
 }
