--- a/src/components/madlib/Form.css
+++ b/src/components/madlib/Form.css
@@ -1,15 +1,34 @@
-input {
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  input {
     display: flex;
-    margin: .5rem;
-    padding: .5rem;
+    margin: 0.5rem auto;
+    padding: 0.5rem;
+    justify-content: space-between;
+  }
+  .clear {
+  padding: 0.5rem;
+  background: rgb(168, 28, 28);
+  outline: none;
 }
-.container {
+  .container {
     display: flex;
     width: 20%;
-    align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+  }
+  .madlib {
+    padding: 0.5rem;
+    border-radius: 2%;
+    outline: none;
+    transition: 1s ease;
+    &:hover {
+    background: darkgoldenrod;
+        }
+    }
+    
 }
-.madlib {
-    padding: .5rem;
-}
+
